--- a/src/main/resources/static/usuario.html
+++ b/src/main/resources/static/usuario.html
@@ -165,7 +165,7 @@
     const alertBox = document.getElementById("alertBox");
     alertBox.style.display = "none";
 
-    fetch('http://localhost:8080/usuarios/registro', {
+    fetch(`${window.location.origin}usuarios/registro`, {
       method: 'POST',
       headers: {
         'Content-Type': 'application/json'
