--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -171,7 +171,7 @@
       const alertBox = document.getElementById("alertBox");
       alertBox.style.display = "none";
 
-      fetch('http://localhost:8080/usuarios/login', {
+      fetch(`${window.location.origin}/usuarios/login`, {
           method: 'POST',
           headers: {
               'Content-Type': 'application/json' // Enviar como JSON
