--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -171,7 +171,7 @@
       const alertBox = document.getElementById("alertBox");
       alertBox.style.display = "none";
 
-      fetch(`${window.location.origin}/usuarios/login`, {
+      fetch(`https://proyectovet.onrender.com/usuarios/login`, {
           method: 'POST',
           headers: {
               'Content-Type': 'application/json' // Enviar como JSON
